# Liasse

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Check Runtime.command  LICENSE  README.en.md  README.md  Run Test Audio.command  Setup MLX Test Env.command  Start Liasse.command  Start Local Transcriber.command  TODO.md  TODO_diarize_seperate_PLAN.md  design.md  launch_app.py  pyproject.toml  requirements-bootstrap.txt  requirements-mlx.txt  run_app.py
docs/: MVP_AND_PACKAGING_PLAN.md  components.md  dev-plan.md  frontend-spec.md  image-prompts.md  long-audio-chunking-research.md
docs/assets/: README.md
liasse/: alignment.py  asr.py  audio_chunker.py  db.py  diarization.py  exporters.py  glossary_store.py  hierarchical_summary.py  qa_engine.py  schemas.py  speaker_labeler.py  summary_pipeline.py  task_runner.py  timefmt.py  transcribe_pipeline.py  transcript_chunker.py  translate.py  web_app.py
liasse/routers/: __init__.py  health.py  qa.py  translation.py
liasse/services/: ollama_health.py
liasse/web_static/: app.js  i18n.js  style.css
local_transcriber/: alignment.py  asr.py  chat.py  cli.py  db.py  diarization.py  downloader.py  exporters.py  hf_paths.py  hierarchical_summary.py  memory_monitor.py  model_router.py  models.py  ollama_lifecycle.py  pipeline.py  qa_engine.py  settings_store.py  speaker_labeler.py  summarizer.py  summary_pipeline.py  task_runner.py  transcribe_pipeline.py  transcript_chunker.py  transcript_index.py  web_app.py  web_models.py
local_transcriber/routers/: models_routes.py  qa.py
local_transcriber/services/: __init__.py  fs_helpers.py  model_cache.py
packaging/: Info.plist  README.md  build_dmg.sh  install.command  launcher.sh
scripts/: check_runtime.py  eval_2min_transcription.py  run_test_audio.py
tests/: test_alignment.py  test_asr_token_join.py  test_audio_chunker.py  test_benchmark_score.py  test_chat_retrieval.py  test_exporters.py  test_exporters_bilingual.py  test_glossary_store.py  test_hf_paths.py  test_hierarchical_summary.py  test_memory_monitor.py  test_memory_tight_8gb.py  test_model_router.py  test_ollama_lifecycle.py  test_ollama_match.py  test_parallel_diarization.py  test_partial_transcript_flow.py  test_pipeline_progress.py  test_pyannote_hook.py  test_qa_engine.py  test_speaker_execution_mode.py  test_speaker_labeler.py  test_summary_pipeline.py  test_task_config.py  test_task_runner_no_prewarm.py  test_transcript_chunker.py  test_transcript_index.py  test_translate.py  test_translation_api.py  test_translation_persistence.py  test_unload_mlx_models.py  test_web_api.py  test_web_app_hf_home.py
(+132 files in other folders)
